--- a/src/Hangfire.Dashboard.Authorization/packages.config
+++ b/src/Hangfire.Dashboard.Authorization/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Common.Logging" version="2.2.0" targetFramework="net45" />
-  <package id="Common.Logging.Core" version="2.2.0" targetFramework="net45" />
-  <package id="HangFire.Core" version="1.1.1" targetFramework="net45" />
-  <package id="ilmerge" version="2.14.1203" targetFramework="net45" />
-  <package id="Microsoft.Owin" version="3.0.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="5.0.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.FileSystems" version="3.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.StaticFiles" version="3.1.0" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="Snork.AspNet.DashboardBuilder" version="1.0.5388" targetFramework="net45" />
 </packages>
